--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "less plugin for witnersmith",
   "license": "MIT",
   "dependencies": {
-    "less": ">= 0.0.1",
+    "less": "1.4.x",
     "async": ">= 0.0.1",
-    "coffee-script": "1.2.x"
+    "coffee-script": ">=1.3"
   }
 }
