Update version to 0.2.2

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wintersmith-less",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "author": "Johan Nordberg <its@johan-nordberg.com>",
-  "description": "less plugin for witnersmith",
+  "description": "less plugin for wintersmith",
   "license": "MIT",
   "keywords": [
     "wintersmith",
