--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wintersmith-less",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "author": "Johan Nordberg <its@johan-nordberg.com>",
   "description": "less plugin for wintersmith",
   "license": "MIT",
@@ -12,6 +12,7 @@
   "dependencies": {
     "less": "1.4.x",
     "async": ">= 0.0.1",
-    "coffee-script": ">=1.7"
+    "coffee-script": ">=1.7",
+    "lodash": "~2.4.1"
   }
 }
