--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "less"
   ],
   "dependencies": {
-    "less": "1.4.x",
-    "async": ">= 0.0.1",
-    "coffee-script": ">=1.7"
+    "less": "~1.7.3",
+    "async": "~0.9.0",
+    "coffee-script": "~1.7.1"
   }
 }
