--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "wintersmith-plugin",
     "less"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jnordberg/wintersmith-less.git"
+  },
   "dependencies": {
     "less": "~1.7.3",
     "async": "~0.9.0",
