--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wintersmith-less",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Johan Nordberg <its@johan-nordberg.com>",
   "description": "less plugin for wintersmith",
   "license": "MIT",
@@ -14,8 +14,9 @@
     "url": "https://github.com/jnordberg/wintersmith-less.git"
   },
   "dependencies": {
-    "less": "~2.5.3",
     "async": "~1.4.2",
-    "coffee-script": "~1.10.0"
+    "coffee-script": "~1.10.0",
+    "less": "~2.5.3",
+    "minimatch": "^3.0.0"
   }
 }
